--- a/public/siteasset/css/style.css
+++ b/public/siteasset/css/style.css
@@ -7,7 +7,7 @@
 
 
 -----------------------------------------------------------------------------------
-  
+
   CSS INDEX
   ===================
 
@@ -1881,13 +1881,13 @@ product__style--7
 .team__thumb a img {
     -webkit-filter: grayscale(100%);
     /* Safari 6.0 - 9.0 */
-    
+
     filter: grayscale(100%);
 }
 .team:hover .team__thumb a img {
     -webkit-filter: grayscale(0%);
     /* Safari 6.0 - 9.0 */
-    
+
     filter: grayscale(00%);
 }
 .htc__team__page .team {
@@ -2616,7 +2616,7 @@ select.select-color {
 .pro__dtl__btn li + li {
     margin-left: 16px;
 }
-.pro__dtl__btn li a {
+.pro__dtl__btn li a ,button {
     border: 1px solid #d5d5d5;
     display: block;
     font-size: 18px;
@@ -2626,19 +2626,19 @@ select.select-color {
     width: 44px;
     transition: 0.3s;
 }
-.pro__dtl__btn li a:hover {
+.pro__dtl__btn li a:hover ,button:hover {
     background: #ff4136;
     border: 1px solid #ff4136;
     color: #fff;
 }
-.pro__dtl__btn li.buy__now__btn a {
+.pro__dtl__btn li.buy__now__btn a ,button {
     color: #4b4b4b;
     font-size: 14px;
     text-transform: uppercase;
     width: 175px;
     transition: 0.3s;
 }
-.pro__dtl__btn li.buy__now__btn a:hover {
+.pro__dtl__btn li.buy__now__btn a:hover ,button:hover {
     color: #fff;
     background: #ff4136;
     border: 1px solid #ff4136;
@@ -3981,7 +3981,7 @@ a.shipping-calculator-button:hover {
     transform: scale(1.5);
     opacity: 0;
     z-index: 99;
-    
+
 }
 .portfolio-icon a i {
     line-height: 50px;
